# platformer

./: .clang-format  CMakeLists.txt  README.md
Data/Images/original files/kenney_physicspack/PNG/Backgrounds/: Thumbs.db
Data/Images/original files/kenney_physicspack/PNG/Other/: Thumbs.db
Data/Images/original files/kenney_physicspack/Spritesheet/: Thumbs.db
Data/csv/: forrest_Tile Layer 1.csv  items.csv  items_new_item-set.csv
src/: Animation.cpp  Animation.h  Collectible.cpp  Collectible.h  Collider.cpp  Collider.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IItemConfig.h  Player.cpp  Player.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  main.cpp
